Update CSVAdapter.java